test/correct/Eq.hs
main =
 [
    [ 1 == 1
    , 1 == 2
    , 1 /= 1
    , 1 /= 2
    ]
 ,  [ 1.0 == 1.0
    , 1.0 == 2.0
    , 1.0 /= 1.0
    , 1.0 /= 2.0
    ]
 ,  [ 'a' == 'a'
    , 'a' == 'b'
    , 'a' /= 'a'
    , 'a' /= 'b'
    ]
 ,  [ True == True
    , True == False
    , True /= True
    , True /= False
    ]
 ,  [ () == ()
    , () /= ()
    ]
 ,  [ (1, 2) == (1, 2)
    , (1, 2) == (1, 1)
    , (1, 'a') /= (1, 'a')
    , (1, 'a') /= (1, 'b')
    , (2, 1) == (1, 1)
    , ('a', 1) == ('b', 1)
    ]
 ,  [ (1,1,1) == (1,1,1)
    , (1,1,1) == (1,1,2)
    , (1,1,1) == (1,2,1)
    , (1,1,1) == (2,1,1)
    ]
 ,  [ (1,1,1,1) == (1,1,1,1)
    , (1,1,1,1) == (1,1,1,2)
    , (1,1,1,1) == (1,1,2,1)
    , (1,1,1,1) == (1,2,1,1)
    , (1,1,1,1) == (2,1,1,1)
    ]
 ,  [ (1,1,1,1,1) == (1,1,1,1,1)
    , (1,1,1,1,1) == (1,1,1,1,2)
    , (1,1,1,1,1) == (1,1,1,2,1)
    , (1,1,1,1,1) == (1,1,2,1,1)
    , (1,1,1,1,1) == (1,2,1,1,1)
    , (1,1,1,1,1) == (2,1,1,1,1)
    ]
 ,  [ (1,1,1,1,1,1) == (1,1,1,1,1,1)
    , (1,1,1,1,1,1) == (1,1,1,1,1,2)
    , (1,1,1,1,1,1) == (1,1,1,1,2,1)
    , (1,1,1,1,1,1) == (1,1,1,2,1,1)
    , (1,1,1,1,1,1) == (1,1,2,1,1,1)
    , (1,1,1,1,1,1) == (1,2,1,1,1,1)
    , (1,1,1,1,1,1) == (2,1,1,1,1,1)
    ]
 ,  [ (1,1,1,1,1,1,1) == (1,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1) == (1,1,1,1,1,1,2)
    , (1,1,1,1,1,1,1) == (1,1,1,1,1,2,1)
    , (1,1,1,1,1,1,1) == (1,1,1,1,2,1,1)
    , (1,1,1,1,1,1,1) == (1,1,1,2,1,1,1)
    , (1,1,1,1,1,1,1) == (1,1,2,1,1,1,1)
    , (1,1,1,1,1,1,1) == (1,2,1,1,1,1,1)
    , (1,1,1,1,1,1,1) == (2,1,1,1,1,1,1)
    ]
 ,  [ (1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,2)
    , (1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,2,1)
    , (1,1,1,1,1,1,1,1) == (1,1,1,1,1,2,1,1)
    , (1,1,1,1,1,1,1,1) == (1,1,1,1,2,1,1,1)
    , (1,1,1,1,1,1,1,1) == (1,1,1,2,1,1,1,1)
    , (1,1,1,1,1,1,1,1) == (1,1,2,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1) == (1,2,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1) == (2,1,1,1,1,1,1,1)
    ]
 ,  [ (1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,1,2)
    , (1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,2,1)
    , (1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,2,1,1)
    , (1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,2,1,1,1)
    , (1,1,1,1,1,1,1,1,1) == (1,1,1,1,2,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1) == (1,1,1,2,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1) == (1,1,2,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1) == (1,2,1,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1) == (2,1,1,1,1,1,1,1,1)
    ]
 ,  [ (1,1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,1,1,2)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,1,2,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,1,2,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,1,2,1,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,1,1,1,2,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,1,1,2,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,1,2,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,1,2,1,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (1,2,1,1,1,1,1,1,1,1)
    , (1,1,1,1,1,1,1,1,1,1) == (2,1,1,1,1,1,1,1,1,1)
    ]
 ,  [ [1,2] == [1,2]
    , [1,2] == [1,1]
    , ['a','b'] /= ['a','b']
    , ['a','b'] /= ['a','c']
    ]
 ]
    
    
    